# VISTO

./: MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt
assets/: styles.css
connector/: base_ontology.py  data_ref.py  ontology.py  ref_ontology.py
in/: keep  tutorial_1.drawio  tutorial_2.drawio  tutorial_3.drawio
ontologies/motor/: motor_ref.drawio  motor_stack.drawio
ontologies/sensor/: thermocouple.drawio
ontologies/setup/: sample.drawio  setup.drawio
scripts/: gxp_compute_pos.py
tutorials/: tutorial_1.py  tutorial_2.py  tutorials.md
visto/: app.py  config.ini
visto/connector/: base_ontology.py  ontology.py  ref_ontology.py
visto/ontologies/ion_chamber/: ion_chamber.drawio
visto/ontologies/lens/: lens.drawio
visto/ontologies/meta/: db_identifier.drawio
visto/ontologies/motor/: motor.drawio
visto/ontologies/setup/: hutch.drawio
visto/visualizer/: build_graph.py  plotter.py  selector.py  serializers.py  stylesheet.py  visualizer_ref.py
visualizer/: build_graph.py  components.py  plotter.py  visualizer_ref.py
